@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class PublishAdView {
}

class PublishAdController {
    +publishAd(string propertyId): void
    +confirmPublication(): Result
}

class RealEstateAgent {
    - name
    -citizenCardNumber
    -email
    -phoneNumber
    +getPropertyContainer(): PropertyContainer
}

class PropertyContainer {
    +filterUnpublishedProperties(): List<Property>
    +publish(Property property): Result
}

class Property {
        +type
        +area
        +location
        +distanceFromCityCenter
        +price
        +photos
        +availability

}

RealEstateAgent "1" -right-> "1" PropertyContainer:  manages
PropertyContainer "1" -right-> "0..*" Property:  contains

PublishAdView ..> PublishAdController
PublishAdController ..> RealEstateAgent
PublishAdController ..> PropertyContainer
PublishAdController ..> Property

@enduml
